--- a/CardShop-groupe9/bin/pom.xml
+++ b/CardShop-groupe9/bin/pom.xml
@@ -36,6 +36,17 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- <dependency> -->
+			<!-- <groupId>com.h2database</groupId> -->
+			<!-- <artifactId>h2</artifactId> -->
+			<!-- <scope>runtime</scope> -->
+			<!-- </dependency> -->
+
+		<dependency>
+		<groupId>org.postgresql</groupId>
+		<artifactId>postgresql</artifactId>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
