--- a/CardShop-groupe9/bin/src/main/resources/application.properties
+++ b/CardShop-groupe9/bin/src/main/resources/application.properties
@@ -1,1 +1,18 @@
+server.address=127.0.0.1
+server.port=8081
 
+## FOR EXTERNAL MYSQL DB
+#spring.jpa.hibernate.ddl-auto = validate
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bd
+
+## PostgreSQL
+#spring.jpa.hibernate.ddl-auto=create
+#spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/bd
+#spring.datasource.username=mylogin
+#spring.datasource.password=mypwd
+
+
+
+## FOR EMBEDED DB
+spring.jpa.hibernate.ddl-auto=create
